# mta-v700

./: .gitignore  .gitmodules  Dockerfile.fastapi  Dockerfile.fastify  Makefile  Makefile.docker  Makefile.poetry  README.md  constraints.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.bin/: .gitkeep  _ci-check-secrets.py  (+5 more)
fastapi_server/: Makefile  debug_config.py  pyproject.toml
fastapi_server/__tests__/: test_health_auth_config.py  test_health_computed.py  test_health_proxy.py
fastapi_server/app/: README.mdx  __init__.py  app.py  app_yaml_config.py  endpoint_auth_compute.py  endpoint_context_compute.py  load_app_config.py  load_app_env.py  main.py  vault_file.py
fastapi_server/app/routes/healthz/: __init__.py  app_yaml_config.py  db_connection_elasticsearch.py  db_connection_postgres.py  db_connection_redis.py  fetch_proxy_dispatcher.py  vault_file.py
fastapi_server/app/routes/healthz/tests/: test_fetch_status.py
packages_py/app_yaml_config/: README.md  pyproject.toml
packages_py/app_yaml_config/src/app_yaml_config/: __init__.py  config_resolver.py  core.py  domain.py  resolve_auth.py  resolve_proxy.py  validators.py
packages_py/app_yaml_config/src/app_yaml_config/get_provider/: __init__.py  provider_config.py  types.py
packages_py/app_yaml_config/src/app_yaml_config/get_service/: __init__.py  service_config.py  types.py
packages_py/app_yaml_config/src/app_yaml_config/get_storage/: __init__.py  storage_config.py  types.py
packages_py/app_yaml_config/tests/: test_get_provider.py  test_get_service.py  test_get_storage.py
packages_py/app_yaml_config/tests_app_yaml_config/: test_get_provider.py
packages_py/ci_placeholders_keys/: pyproject.toml
packages_py/ci_placeholders_keys/src/ci_placeholders_keys/: __init__.py  constants.py  key_mapping.py  transforms.py
packages_py/db_connection_elasticsearch/: pyproject.toml
packages_py/db_connection_elasticsearch/src/db_connection_elasticsearch/: __init__.py  client.py  config.py  constants.py
packages_py/db_connection_postgres/: pyproject.toml
packages_py/db_connection_postgres/src/db_connection_postgres/: __init__.py  client.py  config.py  constants.py  schemas.py  session.py
packages_py/db_connection_postgres/src/db_connection_postgres/integrations/: __init__.py  fastapi.py
packages_py/db_connection_redis/: pyproject.toml
packages_py/db_connection_redis/src/db_connection_redis/: __init__.py  client.py  config.py  constants.py
packages_py/env_resolve/: pyproject.toml
packages_py/env_resolve/src/env_resolve/: __init__.py  core.py
packages_py/env_resolve/tests/: test_core.py
packages_py/fetch_auth_config/: pyproject.toml
packages_py/fetch_auth_config/examples/: basic_usage.py
packages_py/fetch_auth_config/examples/fastapi_app/: main.py
packages_py/fetch_auth_config/src/fetch_auth_config/: __init__.py  compute_registry.py  errors.py  fetch_auth_config.py
packages_py/fetch_auth_config/src/fetch_auth_config/resolution/: config_extractor.py  env_resolver.py
packages_py/fetch_auth_config/src/fetch_auth_config/resolvers/: basic.py  bearer.py  custom.py
packages_py/fetch_auth_config/src/fetch_auth_config/types/: auth_config.py  auth_type.py  requirements.py  token_resolver.py
packages_py/fetch_auth_config/tests_fetch_auth_config/: test_imports.py
packages_py/fetch_auth_encoding/: pyproject.toml
packages_py/fetch_auth_encoding/examples/: basic_usage.py
packages_py/fetch_auth_encoding/src/fetch_auth_encoding/: __init__.py  encoding.py
packages_py/proxy_config/: pyproject.toml
packages_py/proxy_config/examples/: basic_usage.py
packages_py/proxy_config/src/proxy_config/: __init__.py  resolver.py  types.py
packages_py/proxy_config/tests_proxy_config/: test_resolver.py
packages_py/proxy_dispatcher/: pyproject.toml
packages_py/proxy_dispatcher/examples/: basic_usage.py
packages_py/proxy_dispatcher/examples/fastapi_app/: main.py  pyproject.toml
packages_py/proxy_dispatcher/src/proxy_dispatcher/: __init__.py  config.py  dispatcher.py  factory.py  models.py
packages_py/proxy_dispatcher/tests/: test_factory.py
packages_py/runtime_template_resolver/: pyproject.toml
packages_py/runtime_template_resolver/examples/: basic_usage.py  fastapi_example.py
packages_py/runtime_template_resolver/src/runtime_template_resolver/: __init__.py  coercion.py  extractor.py  path_parser.py  patterns.py  resolver.py  types.py  validator.py
packages_py/runtime_template_resolver/tests/: test_resolver.py
packages_py/vault_file/: README.md  pyproject.toml
packages_py/vault_file/src/vault_file/: __init__.py  core.py  domain.py  env_store.py  logger.py  sensitive.py  validators.py
packages_py/yaml_config_factory/: pyproject.toml
packages_py/yaml_config_factory/examples/: overwrite_context_example.py
packages_py/yaml_config_factory/src/yaml_config_factory/: __init__.py  compute_registry.py  context.py  context_resolver.py  factory.py  helpers.py
packages_py/yaml_config_factory/tests/: test_factory_optimize.py  test_repro_header_resolution.py
packages_py/yaml_config_factory/tests_yaml_config_factory/: test_factory.py
tools/mta_rust_breadcrumbs/: Cargo.toml  README.md
tools/mta_rust_breadcrumbs/crates/cli/: Cargo.toml
tools/mta_rust_breadcrumbs/crates/core/: Cargo.toml
tools/mta_rust_mapimports/: Cargo.toml  README.md
tools/mta_rust_mapimports/crates/cli/: Cargo.toml
tools/mta_rust_mapimports/crates/core/: Cargo.toml
tools/mta_rust_mapimports/crates/wasm/: Cargo.toml
tools/mta_rust_structuralcode_synfold/: Cargo.toml  README.md
tools/mta_rust_structuralcode_synfold/crates/cli/: Cargo.toml
tools/mta_rust_structuralcode_synfold/crates/core/: Cargo.toml
tools/mta_rust_structuralcode_synfold/queries/javascript/: folds.scm
tools/mta_rust_structuralcode_synfold/queries/python/: folds.scm
tools/mta_rust_structuralcode_synfold/queries/typescript/: folds.scm
tools/source-analysis/yaml-spec-01/: README.md  output.yaml  output2.yaml  pyproject.toml  run.py
tools/source-analyzers/BRD-static-analysis/: USAGE.md  pyproject.toml
(+397 files in other folders)
