[project]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI Hello World Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "vault-file",
    "app-yaml-config",
    "db-connection-elasticsearch @ file:///Users/Shared/autoload/mta-v700/packages_py/db_connection_elasticsearch",
    "db-connection-postgres @ file:///Users/Shared/autoload/mta-v700/packages_py/db_connection_postgres",
    "db-connection-redis @ file:///Users/Shared/autoload/mta-v700/packages_py/db_connection_redis",
    "greenlet (>=3.3.0,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI Hello World Server"
authors = ["Developer <dev@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
python-dotenv = "^1.0.0"
deepmerge = "^1.1.0"
# SQLAlchemy with async support - pinned to match reference implementation
sqlalchemy = {version = "==2.0.22", extras = ["asyncio"]}
# Async PostgreSQL driver
asyncpg = ">=0.30.0"
# Sync PostgreSQL driver (for alembic and fallback)
psycopg2-binary = "==2.9.9"
# Database migrations
alembic = ">=1.13.1"
# Redis client
redis = ">=4.5.0"
# Elasticsearch client
elasticsearch = ">=8.0.0"
vault-file = {path = "../packages_py/vault_file", develop = true}
app-yaml-config = {path = "../packages_py/app_yaml_config", develop = true}
db_connection_elasticsearch = {develop = true}
db_connection_postgres = {develop = true}
db_connection_redis = {develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
httpx = ">=0.25.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app"]
