[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "db_connection_elasticsearch"
version = "1.0.0"
description = "Unified Elasticsearch connection library for Python"
authors = ["Admin <admin@example.com>"]
packages = [{include = "db_connection_elasticsearch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.0.0"
elasticsearch = "^8.0.0"
opensearch-py = ">=2.4.0"
aiohttp = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
