[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "db_connection_postgres"
version = "0.1.0"
description = "Unified PostgreSQL connection package"
authors = ["Admin <admin@example.com>"]
packages = [{include = "db_connection_postgres", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.0.0"
sqlalchemy = ">=2.0.0"
asyncpg = ">=0.27.0"
psycopg2-binary = ">=2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
