[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fetch-auth-encoding"
version = "0.1.0"
description = "Authentication header encoding utilities"
authors = ["Admin <admin@example.com>"]
packages = [{include = "fetch_auth_encoding", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
