[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MTA Tools Team"]
license = "MIT"
repository = "https://github.com/mta-tools/mta_rust_breadcrumbs"
description = "Enterprise-grade structural code navigation CLI - breadcrumbs and outlines for Python and Node.js"

[workspace.dependencies]
# Tree-sitter for resilient AST parsing
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18"

# File traversal
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parallelism
rayon = "1.8"

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Text handling
ropey = "1.6"

# ANSI colors
termcolor = "1.4"
atty = "0.2"
colored = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
