[project]
name = "yaml-spec-generator"
version = "0.1.0"
description = "Automated source code analysis and YAML spec generation"
authors = [{name = "MTA", email = "dev@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
js = ["esprima>=4.0"]
full = ["esprima>=4.0", "tree-sitter>=0.20"]
dev = ["pytest>=8.0", "ruff>=0.1"]

[project.scripts]
yaml-spec = "yaml_spec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yaml_spec"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
