[package]
name = "mta_breadcrumbs_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for structural code navigation - breadcrumbs and hierarchy extraction"

[dependencies]
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

walkdir.workspace = true
ignore.workspace = true
globset.workspace = true

thiserror.workspace = true
anyhow.workspace = true

rayon.workspace = true
regex.workspace = true
chrono.workspace = true
ropey.workspace = true
colored.workspace = true

[dev-dependencies]
tempfile = "3.9"
