[package]
name = "mta-rust-mapimports-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for import mapping and dependency analysis"
exclude = ["Cargo.lock"]

[dependencies]
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
regex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.8"
