[package]
name = "mta-rust-mapimports-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for import mapping (future use)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mta-rust-mapimports-core = { path = "../core", version = "0.1.0" }
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
